--- a/Client/Pages/DaysUntil.razor
+++ b/Client/Pages/DaysUntil.razor
@@ -1,8 +1,8 @@
-﻿@page "/counter"
+﻿@page "/daysuntil"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Days Until</PageTitle>
 
-<h1>Counter</h1>
+<h1>Days Until</h1>
 
 <p role="status">Current count: @currentCount</p>
 
