--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,11 +2,26 @@
 
 @inject NavigationManager NavManager
 
-<PageTitle>Select...</PageTitle>
+<PageTitle>Travel Apps</PageTitle>
 
-<button class="btn btn-primary" @onclick="navToDaysUntil">Days Until</button>
+<center>
 
-<button class="btn btn-primary" @onclick="navToCurrency">Currencies</button>
+    <br />
+    <br />
+
+    <font size= "24">Travel Apps</font>
+
+
+    <br />
+    <br />
+
+
+<button class="btn btn-primary btn-lg" @onclick="navToDaysUntil">Days Until</button>
+    <br />
+    <br />
+
+<button class="btn btn-primary btn-lg" @onclick="navToCurrency">Currencies</button>
+</center>
 
 
 @code{
